Finished bomb powerup